--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ PASSWORD1=<Password1>
 PASSWORD2=<Password2>
 LOCAL_NETWORK=192.168.0.1/24
 PROXY_PORT=3129  
+KEEP_ALIVE_ENDPOINT=internal.yourcompany.com
+# For security, set your proxy/socks5 username and password here, and enable 
+SUSERNAME=
+SPASSWSORD=
