Pull the proxy configuration (port, local network CIDR) out to the environment variables section

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: ducmthai/openconnect:latest
     build:
       context: ./
+    env_file: .env
     container_name: openconnect
     cap_add:
       - NET_ADMIN
