use s6-overlay instead of runit, add privoxy as HTTP proxy

--- a/vpn.config
+++ b/vpn.config
@@ -1,8 +1,7 @@
 SERVER=vpn-mfa.yourcompany.com
-USERNAME=<Username>
-PASSWORD1=<Password1>
-PASSWORD2=<Password2> 
+USERNAME=<Username> 
 KEEP_ALIVE_ENDPOINT=internal.yourcompany.com
-# For security, set your proxy/socks5 username and password here, and enable 
+# For security, set your socks5 username and password here
+# Privoxy does not support authentication
 SUSERNAME=
 SPASSWSORD=
