--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-LOCAL_NETWORK=192.168.0.1/24
-PROXY_PORT=3129
+LOCAL_NETWORK=192.168.0.0/24
+PROXY_PORT=3128
+HTTP_PROXY_PORT=3129
+FILE__PASSWORD1=/vpn/passwd1
+FILE__PASSWORD2=/vpn/passwd2
