--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: "3.7"
+version: '2.4'
 services:
   openconnect:
     image: ducmthai/openconnect:latest
     build:
       context: ./
-    env_file: .env
     container_name: openconnect
     cap_add:
       - NET_ADMIN
@@ -16,12 +15,23 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./vpn.config:/vpn/vpn.config:ro
+      - ./vpnpasswd1:/vpn/passwd1:ro
+      - ./vpnpasswd2:/vpn/passwd2:ro
+    env_file: .env
     networks:
       - openconnect
     ports:
       - ${PROXY_PORT}:${PROXY_PORT}
+      - ${HTTP_PROXY_PORT}:${HTTP_PROXY_PORT}
     restart: always
     privileged: true
+    sysctls:
+      - net.ipv6.conf.all.disable_ipv6=1
+      - net.ipv6.conf.default.disable_ipv6=1
+      - net.ipv6.conf.lo.disable_ipv6=1    
+      - net.ipv4.tcp_keepalive_intvl=45
+      - net.ipv4.tcp_keepalive_probes=15
+      - net.ipv4.tcp_keepalive_time=300      
     logging:
       driver: "json-file"
       options:
@@ -30,7 +40,5 @@ services:
 
 networks:
   openconnect:
-    name: openconnect
-    ipam:
-      config:
-        - subnet: 198.51.100.1/24
+    external:
+      name: openconnect
