--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,6 @@ services:
     container_name: openconnect
     cap_add:
       - NET_ADMIN
-      - NET_RAW
-      - SYS_MODULE
     devices:
       - /dev/net/tun
     dns:
@@ -17,23 +15,24 @@ services:
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - ./vpn.config:/vpn/vpn.config:ro
-      - ./vpnpasswd1:/vpn/passwd1:ro
-      - ./vpnpasswd2:/vpn/passwd2:ro
+      - ./vpnpasswd:/vpn/passwd1:ro
+      - ./vpntoken:/vpn/token
     env_file: .env
     networks:
       - openconnect
     ports:
       - ${PROXY_PORT}:${PROXY_PORT}
       - ${HTTP_PROXY_PORT}:${HTTP_PROXY_PORT}
+      - 5353:53/tcp
+      - 5353:53/udp
     restart: always
-    privileged: true
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=0
       - net.ipv6.conf.default.disable_ipv6=0
       - net.ipv6.conf.lo.disable_ipv6=0
-      - net.ipv4.tcp_keepalive_intvl=45
-      - net.ipv4.tcp_keepalive_probes=15
-      - net.ipv4.tcp_keepalive_time=300      
+      - net.ipv4.tcp_keepalive_intvl=1
+      - net.ipv4.tcp_keepalive_probes=3
+      - net.ipv4.tcp_keepalive_time=30  
     logging:
       driver: "json-file"
       options:
@@ -43,6 +42,7 @@ services:
       test: /opt/utils/healthcheck.sh ${EXT_IP}
       timeout: 10s
       interval: 3m
+      start_period: 30s
       retries: 2
 
 networks:
