--- a/vpn.config
+++ b/vpn.config
@@ -1,7 +1,6 @@
 SERVER=vpn-mfa.yourcompany.com
 USERNAME=<Username> 
 KEEP_ALIVE_ENDPOINT=internal.yourcompany.com
-# For security, set your socks5 username and password here
-# Privoxy does not support authentication
-SUSERNAME=
-SPASSWSORD=
+DYNAMIC_TOKEN=true
+PROXY_USER=
+PROXY_PASS=
