Add override openssl3 config to get around unsafe legacy renegotiation disabled

--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ LOCAL_NETWORK=192.168.0.0/24
 PROXY_PORT=3128
 HTTP_PROXY_PORT=3129
 FILE__PASSWORD=/vpn/passwd
+OPENSSL_CONF=/etc/ssl/openssl.cnf
 EXT_IP=
